--- a/main.css
+++ b/main.css
@@ -7,23 +7,17 @@ html {
 }
 
 body {
-  /*changes to the font, font color and size for the whole web page*/
+  /* changes to the font, font color and size for the whole web page*/
   font: normal 16px sans-serif;
   color: white;
   margin: 0px;
   padding: 0px;
-  background-image: linear-gradient(
-    to top,
-    #0066ff,
-    #0f54f3,
-    #1d40e6,
-    #2929d8,
-    #3300c9
-  );
+  background: rgb(2, 0, 36);
+  background: linear-gradient(180deg, #020024 0%, #01017e 35%, #4646e7 100%);
 }
 
 .main-heading {
-  /*changes to the main header*/
+  /* changes to the main header */
   text-align: center;
   background-image: url("images/stars-at-night.jpg");
   padding-top: 80px;
@@ -31,7 +25,7 @@ body {
 }
 
 .navbar {
-  /*This will style the navigation bar*/
+  /* This will style the navigation bar*/
   background-image: url("images/stars-at-night.jpg");
   padding-top: 10px;
   padding-bottom: 10px;
@@ -53,7 +47,7 @@ body {
 
 /* Changes the background when hovering the links in the navigation bar */
 .links:hover {
-  background-color: rgb(85, 13, 255);
+  background-color: rgba(70, 70, 231, 1);
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -62,9 +56,11 @@ body {
 .home-quote {
   margin-left: 80px;
 }
+
 .quote-border {
   padding-right: 0px;
 }
+
 .quote {
   background-image: url("images/stars-at-night.jpg");
   text-align: center;
@@ -73,11 +69,9 @@ body {
   border-radius: 5%;
   padding: 114px;
 }
+
 .home-quote table {
   padding-left: 150px;
-}
-
-.right-side {
 }
 
 .next-to-quote {
@@ -146,13 +140,13 @@ body {
 }
 
 /*Changes to About page(about.html)*/
-h1 {
+h2 {
   color: #ffffff;
   text-align: center;
   padding: 18px 0 18px 0;
   margin: 0 0 0px 0;
 }
-h1 span {
+h2 span {
   border: 4px dashed #20bcd5;
   padding: 10px;
 }
@@ -171,7 +165,14 @@ p {
   margin-top: 19px;
 }
 #header {
-  background-image: url("images/blue-sof-waves.jpg");
+  background-image: radial-gradient(
+    circle,
+    #020024,
+    #00083a,
+    #000c51,
+    #000a68,
+    #01017e
+  );
   background-size: cover;
 }
 #header img {
@@ -182,7 +183,7 @@ p {
 }
 #header p {
   font-size: 25pt;
-  color: #3b464c;
+  color: #4646e7;
   padding-top: 5px;
   margin: 0;
   font-weight: bold;
@@ -242,11 +243,11 @@ img,
   width: 86px;
   height: 50px;
 }
-/*
-.skills-bar{
-    padding-right: 200px;
-    padding-left: 200px;
-    padding-bottom: 50px;
+
+.skills-bar {
+  padding-right: 200px;
+  padding-left: 200px;
+  padding-bottom: 50px;
 }
 
 /* This is for the styling of the skills bar */
@@ -278,12 +279,20 @@ img,
   width: 68%;
   background-color: #2bff00;
 }
+.mysql {
+  width: 72%;
+  background-color: #6f00caa1;
+}
+.flask {
+  width: 30%;
+  background-color: #000031;
+}
 
 .my-info {
   text-align: center;
 }
 
-/* CHanges to the duties in the abot page */
+/* Changes to the duties in the abot page */
 ul {
   display: inline-block;
 }
@@ -349,6 +358,12 @@ li {
 h1 {
   text-align: center;
 }
+
+h1 span {
+  border: 4px dashed #20bcd5;
+  padding: 10px;
+}
+
 .row1,
 .row2 {
   display: flex;
@@ -367,6 +382,10 @@ h1 {
   padding: 45px;
 }
 
+.column h1 {
+  padding-bottom: 35px;
+}
+
 .column-container {
   display: flex;
   gap: 150px;
@@ -376,16 +395,30 @@ h1 {
   display: flex;
   gap: 35px;
 }
-.text-appear,
+
 .project-info {
+  border-top: dotted white 5px;
+  border-bottom: dotted white 5px;
   color: rgb(255, 255, 255);
-  width: min-content;
+  width: fit-content;
   padding: 15px;
 }
+.project-info:hover {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.1);
+}
 
+.project-info a {
+  text-decoration: none;
+  color: white;
+}
+.project-info a:hover {
+  text-decoration: underline dashed;
+  color: #20bcd5;
+}
 .project-pic {
   width: 240px;
-  height: 270px;
+  height: 215px;
 }
 
 /*Contact changes(contact.html)*/
@@ -458,32 +491,96 @@ textarea {
 /*Media Responsives*/
 
 @media screen and (max-width: 375px) {
+  .navbar {
+    display: block;
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .home-quote {
+    display: contents;
+    padding-left: 0px;
+  }
+  .next-to-quote {
+    width: 139px;
+    height: 223px;
+    padding-right: 20px;
+  }
+
+  .quote {
+    font-size: 20px;
+  }
+
   #about-section {
     display: block;
   }
 
+  .column {
+    display: block;
+    padding-left: 21px;
+    text-align: center;
+  }
+
   .column-container,
   .column-container2 {
-    display: inline;
+    display: block;
+    gap: 0px;
   }
 
   .project-info {
-    padding-bottom: 10px;
+    display: block;
+    margin-top: 30px;
   }
   .main-heading {
     width: inherit;
   }
 
+  #header img {
+    width: auto;
+    height: 200px;
+  }
   .cards {
+    padding-left: 40px;
+  }
+
+  .form-layout {
+    display: block;
+    padding: 27px;
+  }
+
+  .outer-form {
+    padding: 0px;
+  }
+
+  .contacts-under-form ul {
     padding-left: 0px;
   }
+  .contacts-under-form li {
+    display: inline;
+  }
 }
+/* 
+ #about-section {
+  display: block;
+}
+
+.column,
+.row1 {
+  display: block;
+}
+
+.column-container,
+.column-container2 {
+  display: block;
+  gap: 0px;
+}  */
 
 @media screen and (max-width: 425px) {
   .navbar {
     text-align: center;
-    width: 100%;
     display: grid;
+    padding-left: 0px;
   }
   .home-quote {
     margin-left: 0px;
@@ -495,7 +592,7 @@ textarea {
   }
 
   .quote {
-    font-size: 30px;
+    font-size: 20px;
     padding: 33px;
     display: inline-table;
   }
@@ -512,10 +609,27 @@ textarea {
   table {
     padding-left: 0px;
   }
+
   /*About page*/
+  #header img {
+    display: block;
+    width: auto;
+    height: 200px;
+    margin: auto;
+  }
+
+  .column {
+    display: block;
+  }
+
+  .project-info {
+    margin-top: 30px;
+  }
+
   #about-section {
     display: block;
   }
+
   /*Portfolio page media changes*/
   .row1,
   .row2 {
@@ -534,25 +648,28 @@ textarea {
 
   .cards {
     display: block;
-    padding-left: 0px;
+    padding-left: 65px;
   }
+
   /*Contact page Media Changes*/
-  .contacts-under-form li {
+  .contacts-under-form ul li {
     display: inline;
+    padding-inline: 0px;
+    padding: 22px;
   }
   .outer-form {
     padding-left: 5px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  /*Index.html(Home page)*/
-  .main-heading {
-    /*changes to the main header*/
-    width: 100%;
-  }
+/* @media screen and (max-width: 600px) {
+  /* Index.html(Home page)*/
+/* .main-heading { */
+/* changes to the main header */
+/* width: 100%;
+  } */
 
-  .navbar {
+/* .navbar {
     padding-left: 0px;
     text-align: center;
     width: 100%;
@@ -587,10 +704,10 @@ textarea {
 
   table {
     padding-left: 0px;
-  }
+  } */
 
-  /*About page*/
-  .skills-bar {
+/* About page*/
+/* .skills-bar {
     padding-right: 50px;
     padding-left: 50px;
     padding-bottom: 50px;
@@ -603,20 +720,21 @@ textarea {
   li {
     text-align: left;
   }
-  /*Portfolio page media changes*/
-  .row1,
+
+  /* Portfolio page media changes*/
+/* .row1,
   .row2 {
     display: block;
-  }
+  } */
 
-  /*Testimonial page media changes*/
-  .cards {
+/* Testimonial page media changes*/
+/* .cards {
     display: block;
     padding-left: 150px;
   }
 
-  /*Contact page Media Changes*/
-  .outer-form {
+  Contact page Media Changes*/
+/* .outer-form {
     display: block;
     padding: 0px;
   }
@@ -624,9 +742,9 @@ textarea {
   .table-for-contacts {
     padding-left: 0px;
   }
-}
+}  */
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .quote-border {
     padding: 0px;
     height: 317px;
@@ -644,38 +762,47 @@ textarea {
   .next-to-quote {
     width: 150px;
     height: 300px;
-  }
+  } */
 
-  .home-quote table {
+/* .home-quote table {
     padding-left: 0px;
-  }
-  /*About page*/
+  } */
+/* About page */
 
-  /*Portfolio page media changes*/
-  .row1,
+/* Portfolio page media changes*/
+/* .row1,
   .row2 {
     display: block;
-  }
+  } */
 
-  /*Contact page Media Changes*/
-  .outer-form {
+/* Contact page Media Changes*/
+/* .outer-form {
     padding-left: 5px;
   }
-}
+} */
 
 @media screen and (max-width: 768px) {
   .links {
     padding-inline: 34px;
   }
 
-  .right-side {
-    padding-right: inherit;
-  }
-
   .quote-border {
     display: inline-block;
   }
 
+  .quote {
+    padding: 100px;
+    font-size: large;
+  }
+
+  .home-quote {
+    margin-left: 0px;
+  }
+
+  #header img {
+    width: auto;
+    height: 250px;
+  }
   table {
     padding-left: 0px;
   }
@@ -684,6 +811,14 @@ textarea {
   .row2 {
     display: block;
   }
+
+  .project-info {
+    width: min-content;
+  }
+
+  /* .column-container,
+  .column-container2 {
+  } */
 
   .contacts-under-form li {
     display: inline;
